# QMD

./: .gitignore  README.md  pyproject.toml
qmd/: __init__.py  cli.py  eval.py  hybrid.py  index_store.py  ingest.py  sample_data.py  search_bm25.py  search_embed.py  synthesize.py  utils.py
